--- a/assignment_03_1.ipynb
+++ b/assignment_03_1.ipynb
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,10 @@
     "    # complete the blanks\n",
     "    #\n",
     "    \n",
+    "    dx = compute_derivative_x_central(I)\n",
+    "    dy = compute_derivative_y_central(I)\n",
     "    \n",
+    "    norm_gradient = np.sqrt(dx*dx + dy*dy)\n",
     "    \n",
     "    #\n",
     "    # ++++++++++++++++++++++++++++++++++++++++++++++++++\n",
